k8s/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: argocd-server-http
    namespace: argocd
    annotations:
        kubernetes.io/ingress.class: "nginx"
        nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
        nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
        nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
    rules:
        - http:
              paths:
                  - path: /argocd
                    pathType: Prefix
                    backend:
                        service:
                            name: argocd-server
                            port:
                                name: http
